fix table meta options styles on smaller screens

--- a/jsapp/scss/components/_kobo.light-button.scss
+++ b/jsapp/scss/components/_kobo.light-button.scss
@@ -18,6 +18,7 @@
   margin: 0;
   border-width: 1px;
   border-style: solid;
+  white-space: nowrap; // for smaller screens
 
   // icon inside
   i,
