--- a/jsapp/scss/components/_kobo.submission-data-table.scss
+++ b/jsapp/scss/components/_kobo.submission-data-table.scss
@@ -117,29 +117,3 @@ $submission-data-table-space: 12px;
   display: inline-block;
   font-family: monospace;
 }
-
-// Table meta row with bulk options
-
-.table-meta {
-  flex-grow: 1;
-  height: 30px;
-  padding: 10px 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  .table-meta__counter {
-    display: span;
-  }
-}
-
-.table-meta__bulk-options {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  .popover-menu .popover-menu__toggle {
-    // overriding 36px from jsapp/scss/components/_kobo.form-view.scss
-    height: auto;
-  }
-}
